LH-214 initial commit
- define Occupation, Dimension and Occupations definitions
- define occupations end-point spec
- define route
