# app/serializers/api/v1/factor_serializer.rb
@@ -1,0 +1,13 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    class FactorSerializer < ActiveModel::Serializer
+      attributes :id, :name, :description
+
+      attribute :updated_at do
+        object.updated_at.utc.iso8601
+      end
+    end
+  end
+end
